crates/ruff_server/tests/e2e/snapshots/e2e__code_action__format_and_organize_imports_resolves_deferred.snap
---
source: crates/ruff_server/tests/e2e/code_action.rs
expression: resolved.edit
---
{
  "changes": {
    "file://<temp_dir>/test.py": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 0
          },
          "end": {
            "line": 5,
            "character": 0
          }
        },
        "newText": "import abc\nimport os\nimport sys\n\nx = {\"a\": 1}\n"
      }
    ]
  }
}
