crates/ruff_server/tests/e2e/snapshots/e2e__code_action__optimize_imports_is_answered_when_named.snap
---
source: crates/ruff_server/tests/e2e/code_action.rs
expression: actions
---
[
  {
    "title": "Ruff: Optimize imports",
    "kind": "source.optimizeImports.ruff",
    "edit": {
      "changes": {
        "file://<temp_dir>/test.py": [
          {
            "range": {
              "start": {
                "line": 0,
                "character": 0
              },
              "end": {
                "line": 3,
                "character": 0
              }
            },
            "newText": "import abc\nimport sys\n"
          }
        ]
      }
    }
  }
]
